@@ -1,6 +1,7 @@
 2004-03-19  ujwal
 
 	* Removed obsolete code.
+	* Minor fix with margins.
 
 2004-03-18  ujwal
 
